--- a/code/control/pom.xml
+++ b/code/control/pom.xml
@@ -12,12 +12,12 @@
         <repository>
             <id>jzy3d-snapshots</id>
             <name>Jzy3d Snapshots</name>
-            <url>http://maven.jzy3d.org/snapshots</url>
+            <url>http://maven.jzy3d.org/snapshots/</url>
         </repository>
         <repository>
             <id>jzy3d-releases</id>
             <name>Jzy3d Releases</name>
-            <url>http://maven.jzy3d.org/releases</url>
+            <url>http://maven.jzy3d.org/releases/</url>
         </repository>
     </repositories>
 
@@ -25,7 +25,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <source>1.7</source>
@@ -55,6 +55,31 @@
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf-intellij-themes</artifactId>
             <version>1.0-rc1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jzy3d</groupId>
+            <artifactId>jzy3d-native-jogl-awt</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jzy3d</groupId>
+            <artifactId>jzy3d-native-jogl-swing</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jzy3d</groupId>
+            <artifactId>jzy3d-native-jogl-newt</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jzy3d</groupId>
+            <artifactId>jzy3d-native-jogl-swt</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jzy3d</groupId>
+            <artifactId>jzy3d-emul-gl</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
