--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
 cad/gcode/* linguist-generated
 *.plt linguist-generated
 code/control/doc/* linguist-documentation
+*.html linguist-documentation
+*.css linguist-vendored
+*.js linguist-vendored
 *.toc linguist-generated
 confocal-lsm/old/Software/gui.py linguist-generated
