--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-old/Old??from?Iocane?/LSM/adafruit_hid/ linguist-vendored
+old/Old??from?Iocane?/LSM/adafruit_hid/* linguist-vendored
 cad/gcode/* linguist-generated
 *.plt linguist-generated
 #code/control/doc/* linguist-documentation
