--- a/.gitattributes
+++ b/.gitattributes
@@ -7,4 +7,5 @@ old/Software/gui.py linguist-generated
 old/Software/tests/BlobDetector/* linguist-vendored
 *.js linguist-vendored
 */adafruit_hid/* linguist-vendored
+old/Old (from Iocane)/LSM/trinket m0 backup/lib/adafruit_hid/* linguist-vendored
 *.toc linguist-generated
