Set gui resource as linguist-generated

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ old/Software/tests/BlobDetector/** linguist-vendored
 old/Old??from?Iocane?/LSM/trinket?m0?backup/lib/adafruit_hid/** linguist-vendored
 old/Old??from?Iocane?/LSM/adafruit_hid/** linguist-vendored
 *.toc linguist-generated
+old/Software/GUI_resource_rc.py linguist-generated
